force-app/main/default/objects/SSP_Relationship__c/SSP_Relationship__c.object-meta.xml
<CustomObject>
    <description>Junction object created to map relationship between two members added to an Application/Case</description>
    <label>SSP Relationship</label>
    <nameField>
        
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        
        <label>SSP_Relationship Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>SSP Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>