force-app/main/default/objects/SSP_Relationship__c/fields/IntendToPursueLegalCustodyToggle__c.field-meta.xml
<CustomField>
    <fullName>IntendToPursueLegalCustodyToggle__c</fullName>
    <description>This field is used to identify if individual intends to pursue custody of related individual</description>
    <label>Intend to Pursue Custody?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>