force-app/main/default/objects/SSP_Relationship__c/fields/IsActingParentToggle__c.field-meta.xml
<CustomField>
    <fullName>IsActingParentToggle__c</fullName>
    <description>This field is used to identify if the individual is acting parent for related individual</description>
    <label>Acting Parent?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>