force-app/main/default/objects/SSP_Relationship__c/fields/IsCareTakerToggle__c.field-meta.xml
<CustomField>
    <fullName>IsCareTakerToggle__c</fullName>
    <description>This field is used to identify if the individual is acting as caretaker of related individual</description>
    <label>Acting Care taker?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>