force-app/main/default/objects/SSP_Relationship__c/fields/RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>RelationshipType__c</fullName>
    <description>This field is used to identify the relationship type</description>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Relationship</valueSetName>
        
        </valueSet>
</CustomField>