force-app/main/default/objects/SSP_Relationship__c/fields/SSP_MemberRelatedTo__c.field-meta.xml
<CustomField>
    <fullName>SSP_MemberRelatedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate a related member to an individual</description>
    <label>SSP_MemberRelatedTo</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>SSP_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>