force-app/main/default/objects/SSP_Relationship__c/recordTypes/Relationship.recordType-meta.xml
<RecordType>
    <fullName>Relationship</fullName>
    <active>true</active>
    <label>Relationship</label>
</RecordType>