force-app/main/default/objects/SSP_Relationship__c/listViews/Relationships.listView-meta.xml
<ListView>
    <fullName>Relationships</fullName>
    <columns>NAME</columns>
    <columns>SSP_Member__c</columns>
    <columns>SSP_MemberRelatedTo__c</columns>
    <columns>RelationshipType__c</columns>
    <filterScope>Everything</filterScope>
    <label>Relationships</label>
</ListView>